Working on crud opperations

--- a/grails-app/i18n/domain.properties
+++ b/grails-app/i18n/domain.properties
@@ -44,17 +44,24 @@ accountType.active.label=Active
 accountType.accounts.label=Accounts
 
 #Bank
-bank=Bank
-bank.name.label=Name
-bank.dateColumn.label=Date Column
-bank.descriptionColumn.label=Description Column
-bank.amountColumn.label=Amount Column
-bank.debitColumn.label=Debit Column
-bank.creditColumn.label=Credit Column
-bank.active.label=Active
-bank.hasMultipleAmountColumns.label=Multiple Columns
-bank.hasHeading.label=Has Heading
-bank.accounts.label=Accounts
+importFormat=Import Format
+importFormat.name.label=Name
+importFormat.dateColumn.label=Date Column
+importFormat.dateColumn.tip=The index of the date column in a single row of the banks export csv
+importFormat.descriptionColumn.label=Description Column
+importFormat.descriptionColumn.tip=The index of the description column in a single row of the banks export csv
+importFormat.amountColumn.label=Amount Column
+importFormat.amountColumn.tip=The index of the amount column in a single row of the banks export csv
+importFormat.debitColumn.label=Debit Column
+importFormat.debitColumn.tip=The index of the debit column in a single row of the banks export csv
+importFormat.creditColumn.label=Credit Column
+importFormat.creditColumn.tip=The index of the credit column in a single row of the banks export csv
+importFormat.active.label=Active
+importFormat.hasMultipleAmountColumns.label=Multiple Columns
+importFormat.hasMultipleAmountColumns.tip=Does the banks export csv have two columns for amounts?
+importFormat.hasHeading.label=Has Heading
+importFormat.hasHeading.tip=If the top row of the banks export csv is a heading row.
+importFormat.accounts.label=Accounts
 
 #BankRecord
 bankRecord=Bank Record
