--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -27,3 +27,17 @@ adminMainCategory.show.subheading=Show
 adminCategory.index.title=Admin -Category
 adminCategory.index.heading=Category
 adminCategory.index.subheading=List
+#show
+adminCategory.show.title=Admin Show -Category
+adminCategory.show.heading=Showing Category: <strong>{0}</strong>
+adminCategory.show.subheading=Show
+
+###adminImportFormat
+#index
+adminImportFormat.index.title=Admin -ImportFormat
+adminImportFormat.index.heading=ImportFormat
+adminImportFormat.index.subheading=List
+#show
+adminImportFormat.show.title=Admin Show -ImportFormat
+adminImportFormat.show.heading=Showing ImportFormat: <strong>{0}</strong>
+adminImportFormat.show.subheading=Show
