Completed  administrative crud operations for:  MainCategory  Category  ImportFormat  Account  AccountType

--- a/grails-app/i18n/domain.properties
+++ b/grails-app/i18n/domain.properties
@@ -35,6 +35,7 @@ account.liquid.label=Liquid
 account.active.label=Active
 account.transactions.label=Transactions
 account.bankRecords.label=Label
+account.importFormat.label=Import Format
 
 #AccountType
 accountType=Account Type
