--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -34,10 +34,30 @@ adminCategory.show.subheading=Show
 
 ###adminImportFormat
 #index
-adminImportFormat.index.title=Admin -ImportFormat
-adminImportFormat.index.heading=ImportFormat
+adminImportFormat.index.title=Admin -Import Format
+adminImportFormat.index.heading=Import Format
 adminImportFormat.index.subheading=List
 #show
-adminImportFormat.show.title=Admin Show -ImportFormat
-adminImportFormat.show.heading=Showing ImportFormat: <strong>{0}</strong>
+adminImportFormat.show.title=Admin Show -Import Format
+adminImportFormat.show.heading=Showing Import Format: <strong>{0}</strong>
 adminImportFormat.show.subheading=Show
+
+###adminAccount
+#index
+adminAccountType.index.title=Admin -Account Type
+adminAccountType.index.heading=Account Type
+adminAccountType.index.subheading=List
+#show
+adminAccountType.show.title=Admin Show -Account Type
+adminAccountType.show.heading=Showing Account Type: <strong>{0}</strong>
+adminAccountType.show.subheading=Show
+
+###adminAccount
+#index
+adminAccount.index.title=Admin -Account
+adminAccount.index.heading=Account
+adminAccount.index.subheading=List
+#show
+adminAccount.show.title=Admin Show -Account
+adminAccount.show.heading=Showing Account: <strong>{0}</strong>
+adminAccount.show.subheading=Show
