--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -81,7 +81,7 @@ transaction.index.paycheck.heading=Pay Check
 
 ###transactionSingle
 #index
-transactionSingle.index.title=Single Transaction Home
+transactionSingle.index.title=Single Transactions Home
 transactionSingle.index.heading=Single Transactions
 transactionSingle.index.form.heading=Enter Transaction
 transactionSingle.index.table.list.heading=Transaction List
@@ -90,4 +90,21 @@ transactionSingle.edit.title=Single Transaction Edit
 transactionSingle.edit.heading=Edit Transaction
 transactionSingle.edit.return.to.index.button=Back To List
 transactionSingle.edit.delete.confirm.title=Confirm Deletion
-transactionSingle.edit.delete.confirm.message=Are you sure you want to delete this transaction?
+transactionSingle.edit.delete.confirm.message=Are you sure you want to permanently delete this and any associated transactions?
+
+###transactionCombo
+#index
+transactionCombo.index.title=Combo Transactions Home
+transactionCombo.index.heading=Combo Transactions
+transactionCombo.index.form.heading=New Combo Transactions
+transactionCombo.index.form.tip=Enter the date, account and total of the transactions.
+transactionCombo.index.table.list.heading=Transaction List
+#index
+transactionCombo.create.title=Create Combo Transactions
+transactionCombo.create.heading=Create Combo Transactions
+transactionCombo.create.form.heading=New Combo Transaction
+transactionCombo.create.form.tip=Enter the description, category and amount of this transaction.
+transactionCombo.create.table.list.heading=Pending Transaction List
+transactionCombo.create.remainder=Remaining Amount
+transactionCombo.create.cancel.heading=Cancel Transaction Creation
+transactionCombo.create.cancel.confirm.message=These {0} transaction(s) have not been saved. Canceling now will prevent them from saving.
