Completed the account transfer functionality and added cash back functionality to the combo transaction flow.

--- a/grails-app/i18n/command.properties
+++ b/grails-app/i18n/command.properties
@@ -115,3 +115,10 @@ transactionCommand.user.label=User
 
 #TransactionComboGroup
 transactionComboGroupCommand.transactions.label=Transactions
+
+#TransactionAccountTransfer
+transactionAccountTransferCommand.date.label=Transfer Date
+transactionAccountTransferCommand.toAccount.label=To Account
+transactionAccountTransferCommand.fromAccount.label=From Account
+transactionAccountTransferCommand.amount.label=Amount To Transfer
+transactionAccountTransferCommand.fee.label=Transaction Fee
