--- a/grails-app/i18n/controller.properties
+++ b/grails-app/i18n/controller.properties
@@ -14,3 +14,7 @@ transactionSingle.delete.success=Transaction deleted
 ###transactionCombo
 transactionCombo.save.success={0} transactions totaling {1} have been saved.
 transactionCombo.delete.success={0} transactions were deleted, {1} has been added back to the {2} account.
+
+###transactionAccountTransfer
+transactionAccountTransfer.save.success=Successfully transferred {0} from {1} account to {2} account.
+transactionAccountTransfer.delete.success=Successfully deleted transfer.
