--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -108,3 +108,14 @@ transactionCombo.create.table.list.heading=Pending Transaction List
 transactionCombo.create.remainder=Remaining Amount
 transactionCombo.create.cancel.heading=Cancel Transaction Creation
 transactionCombo.create.cancel.confirm.message=These {0} transaction(s) have not been saved. Canceling now will prevent them from saving.
+
+###transactionAccountTransfer
+#index
+transactionAccountTransfer.index.title=Account Transfer Home
+transactionAccountTransfer.index.heading=Account Transfer
+transactionAccountTransfer.index.table.list.heading=Transfer List
+transactionAccountTransfer.index.form.heading=Create Transfer
+
+#index
+transactionAccountTransfer.edit.title=Edit Account Transfer
+transactionAccountTransfer.edit.heading=Edit Account Transfer
