Completed Tracking Functionality.

--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -72,7 +72,7 @@ adminAccount.show.heading=Showing Account: <strong>{0}</strong>
 adminAccount.show.subheading=Show
 
 ###transaction
-transaction.index.title=Transaction Home
+transaction.index.title=Transaction Dashboard
 transaction.index.heading=Transaction Home
 transaction.index.single.heading=Single Transactions
 transaction.index.combo.heading=Combination Transactions
@@ -90,7 +90,9 @@ transactionSingle.edit.title=Single Transaction Edit
 transactionSingle.edit.heading=Edit Transaction
 transactionSingle.edit.return.to.index.button=Back To List
 transactionSingle.edit.delete.confirm.title=Confirm Deletion
-transactionSingle.edit.delete.confirm.message=Are you sure you want to permanently delete this and any associated transactions?
+transactionSingle.edit.delete.confirm.message=Are you sure you want to permanently delete this transaction?
+transactionSingle.edit.multiDelete.confirm.message=This action will also delete {0} associated transactions.
+
 
 ###transactionCombo
 #index
