Finished Planning and created cash flow calendar

--- a/grails-app/i18n/command.properties
+++ b/grails-app/i18n/command.properties
@@ -103,6 +103,41 @@ plannedTransactionCommand.amount.label=A1mount
 plannedTransactionCommand.rolling.label=Rolling
 plannedTransactionCommand.transactions.label=Transactions
 
+##CreatePlannedTransactionCommand
+#Fields
+createPlannedTransactionCommand.category.label=Category
+createPlannedTransactionCommand.mode.label=Mode
+createPlannedTransactionCommand.startDate.label=Start Date
+createPlannedTransactionCommand.endDate.label=End Date
+createPlannedTransactionCommand.replaceCurrent.label=Delete all planned transactions for this category in this date range.
+createPlannedTransactionCommand.amountMode.label=Amount Mode
+createPlannedTransactionCommand.amount.label=Amount
+createPlannedTransactionCommand.frequency.label=Frequency
+createPlannedTransactionCommand.customFrequency.label=Custom Frequency
+createPlannedTransactionCommand.customFrequencyType.label=Custom Frequency Type
+#field errors
+createPlannedTransactionCommand.endDate.invalidEndDate=The end date must be prior to the start date.
+createPlannedTransactionCommand.customFrequency.nullable=When selecting a custom frequency you must specify a skip value.
+createPlannedTransactionCommand.customFrequencyType.nullable=When selecting a custom frequency you must specify a custom time measurement.
+createPlannedTransactionCommand.amountMode.nullable=Please specify a {0}
+
+#other labels
+createPlannedTransactionCommand.custom.frequency.amount.label=Skip value
+createPlannedTransactionCommand.custom.frequency.amount.tip=The number of skips between planned transactions
+createPlannedTransactionCommand.custom.frequency.type.label=Custom Time Measurement
+createPlannedTransactionCommand.custom.frequency.type.tip=The time period that will define how much time elapses between skips
+createPlannedTransactionCommand.mode.tip=Do you want to create one planned transaction or a set?
+createPlannedTransactionCommand.frequency.tip=How often do you plan to plan this transaction to occur?
+createPlannedTransactionCommand.spread.amount.label=Spread the amount evenly over all new planned transactions
+createPlannedTransactionCommand.aggregate.amount.label=Create all planned transaction using this amount.
+createPlannedTransactionCommand.frequency.daily.label=Daily
+createPlannedTransactionCommand.frequency.weekly.label=Weekly
+createPlannedTransactionCommand.frequency.monthly.label=Monthly
+createPlannedTransactionCommand.frequency.custom.label=Custom
+
+
+
+
 #Transaction
 transactionCommand.date.label=Date
 transactionCommand.dateCreated.label=Date Created
@@ -122,3 +157,8 @@ transactionAccountTransferCommand.toAccount.label=To Account
 transactionAccountTransferCommand.fromAccount.label=From Account
 transactionAccountTransferCommand.amount.label=Amount To Transfer
 transactionAccountTransferCommand.fee.label=Transaction Fee
+
+#DeletePlannedTransactionCommand
+deletePlannedTransactionCommand.startDate.label=Start Date
+deletePlannedTransactionCommand.endDate.label=End Date
+deletePlannedTransactionCommand.endDate.invalid=End Date must be after Start Date
