--- a/grails-app/i18n/controller.properties
+++ b/grails-app/i18n/controller.properties
@@ -18,3 +18,6 @@ transactionCombo.delete.success={0} transactions were deleted, {1} has been adde
 ###transactionAccountTransfer
 transactionAccountTransfer.save.success=Successfully transferred {0} from {1} account to {2} account.
 transactionAccountTransfer.delete.success=Successfully deleted transfer.
+
+###plannedTransaction
+plannedTransactionCont.update.success.message=Planned Transaction has been successfully updated.
