--- a/grails-app/i18n/domain.properties
+++ b/grails-app/i18n/domain.properties
@@ -113,7 +113,7 @@ budgetItem.transactions.label=Transactions
 #PlannedTransaction
 plannedTransaction=Planned Transaction
 plannedTransaction.date.label=Date
-plannedTransaction.amount.label=A1mount
+plannedTransaction.amount.label=Amount
 plannedTransaction.rolling.label=Rolling
 plannedTransaction.transactions.label=Transactions
 
