--- a/grails-app/i18n/gsp.properties
+++ b/grails-app/i18n/gsp.properties
@@ -118,6 +118,32 @@ transactionAccountTransfer.index.heading=Account Transfer
 transactionAccountTransfer.index.table.list.heading=Transfer List
 transactionAccountTransfer.index.form.heading=Create Transfer
 
-#index
+#show
 transactionAccountTransfer.edit.title=Edit Account Transfer
 transactionAccountTransfer.edit.heading=Edit Account Transfer
+
+
+###plannedTransaction
+#index
+plannedTransactionView.index.title=View Budget
+plannedTransactionView.index.heading={0}/{1} Budget
+plannedTransactionView.index.options.panel.heading=Options
+plannedTransactionView.index.options.panel.show=Click on one of the budget items to view and/or modify planned transactions.
+plannedTransactionView.index.options.panel.create= Plan new transactions.
+plannedTransactionView.index.plannedTransactions.panel.heading=Planned Transactions
+plannedTransactionView.index.switch.panel.heading=Switch Months
+
+#show
+plannedTransactionView.show.panel.heading=Planned transactions for {0}
+
+#edit
+plannedTransactionView.edit.panel.heading=Edit planned transaction for {0}
+plannedTransactionView.edit.delete.message=Are you sure you want to delete this from the budget?
+
+#create
+plannedTransactionView.create.panel.heading=Create planned transactions
+plannedTransactionView.create.cancel.button=Cancel
+plannedTransactionView.create.cancel.confirm.message=This action will stop the creation of you planned transactions and reset the page.
+
+#delete
+plannedTransactionView.delete.panel.heading=Delete multiple planned transactions for {0}
