--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -12,7 +12,7 @@ default.invalid.validator.message=Property [{0}] of class [{1}] with value [{2}]
 default.not.inlist.message=Property [{0}] of class [{1}] with value [{2}] is not contained within the list [{3}]
 default.blank.message=Property [{0}] of class [{1}] cannot be blank
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
-default.null.message={0} can not be left blank.
+default.null.message=Please specify {0}
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
 default.paginate.prev=Previous
